<resources>
    <string name="app_name">MovieApp</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="continuar">Continuar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="informe_seu_email_para_podermos_continuar">Informe seu email para podermos continuar</string>
    <string name="cadastro">Cadastro</string>
    <string name="descricao">Descrição:</string>
    <string name="descri_o_do_filme">Descrição do filme</string>
    <string name="elenco">elenco...</string>
    <string name="elenco_">Elenco:</string>
    <string name="nome_do_filme">Nome do Filme</string>
    <string name="carregando">Carregando...</string>
    <string name="filmes_categoria">Filmes Categoria</string>
    <string name="assistir_agora">Assistir agora</string>
</resources>