<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CadastroPage">


    <ImageView
        android:id="@+id/ic_arrow_back_login_page"
        style="@style/Icon_Arrow_Back_Cadastro_Page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_cadastrar"
        style="@style/Medium_Text_Cadastro_Page"
        android:text="@string/cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_informe_email"
        style="@style/custom_text_cadastro_page"
        android:text="@string/informe_seu_email_para_podermos_continuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_cadastrar" />


    <TextView
        android:id="@+id/text_email"
        style="@style/Small_text_cadastro_page"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_informe_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_email"
        style="@style/TextInputLayout_Cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:inputType="textEmailAddress"
            style="@style/TextInputEditText_Cadastro" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_senha"
        style="@style/Small_text_cadastro_page"
        android:text="@string/senha"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_senha"
        style="@style/TextInputLayout_Cadastro"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_senha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_senha"
            android:inputType="numberPassword"
            style="@style/TextInputEditText_Cadastro" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continuar"
        style="@style/Button_cadastro"
        android:background="@drawable/background_button_loading"
        android:text="@string/continuar"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_senha" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cadastrar"
        style="@style/Button_cadastro"
        android:background="@drawable/background_button_loading"
        android:text="@string/cadastrar"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_senha" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_progressbar"
        style="@style/Button_cadastro"
        android:gravity="center"
        android:background="@drawable/background_button_loading"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_senha">

        <ProgressBar
            style="@style/progress_bar_cadastro" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>